<resources>
    <string name="app_name">CM</string>
    <string name="assunto">Assunto</string>
    <string name="descricao">Descrição</string>
    <string name="inicio">Bem-Vindo!</string>
    <string name="user">Utilizador</string>
    <string name="pass">Palavra-chave</string>
    <string name="update">Atualizar</string>
    <string name="apagar">Eliminar</string>
    <string name="iniciar">Iniciar Sessão</string>
    <string name="add">Adicionar</string>
    <string name="see">Ver Notas</string>
    <string name="mensagem">Insira assunto e local</string>
    <string name="mensagem2">Eliminar</string>
    <string name="mensagem3">Quer eliminar a nota?</string>
    <string name="mensagem4">Cancelar</string>
    <string name="novo">Registar</string>
    <string name="email">Email</string>
    <string name="register">Criar nova conta</string>
    <string name="registar">Registar</string>
    <string name="name">Nome</string>
    <string name="PontoInserido">Foi inserido o ponto </string>
    <string name="PontoExiste">O ponto já existe </string>
    <string name="ErroWS"> "Erro na conexão com o WS"</string>
    <string name="PontoApagado"> "O ponto foi apagado"</string>
    <string name="PontoNApagado"> "O ponto não foi apagado"</string>
    <string name="PontoAlterado">"O ponto  foi alterado"</string>
    <string name="PontoNAlterado">"O ponto não foi alterado"</string>
    <string name="NotaI">"Nota inserida"</string>
    <string name="NotaAtualizada"> "A nota foi atualizada"</string>
    <string name="NotaApagada"> "A nota foi apagada"</string>
    <string name="UtilizadorExiste"> "O Utilizador já existe no sistema"</string>
    <string name="UtilizadorRegistado"> "O Utilizador foi registado"</string>
    <string name="Notas"> "Notas"</string>
</resources>
