<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <EditText
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/edAssunto"
        android:hint="@string/assunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/edLocal"
        android:hint="@string/local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_margin="5dp"
            android:textColor="#FFF"
            android:background="@color/colorPrimary"
            android:id="@+id/btnAdd"
            android:text="@string/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:id="@+id/btnShowAll"
            android:text="@string/see" />

    </LinearLayout>


</RelativeLayout>