<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"></include>

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <EditText
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edAssunto_Update"
        android:layout_marginBottom="20sp"
        android:hint="@string/assunto">

    </EditText>

    <EditText
        android:layout_below="@+id/edAssunto_Update"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edLocal_Update"
        android:layout_marginBottom="20sp"
        android:hint="@string/descricao">

    </EditText>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:layout_margin="5dp"
            android:textColor="#000"
            android:background="#B00020"
            android:id="@+id/btnUpdate_Update"
            android:text="@string/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>
</RelativeLayout>