<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#fff">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:backgroundTint="#fff"
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_note_add_black_24dp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="42dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="151dp"
            android:layout_height="113dp"
            android:layout_marginBottom="25dp"
            app:srcCompat="@drawable/ic_person_black_24dp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingLeft="5dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#B00020"
            android:text="@string/iniciar"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/registar"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/novo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>